[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onpy"
version = "0.0.3"
requires-python = ">=3.12"
authors = [
  {name = "Kyle Tennison", email = "kyletennison@gmail.com"},
]
maintainers = [
    {name = "Kyle Tennison", email = "kyletennison@gmail.com"},
]
description = "A Python API for building models in OnShape"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
    "loguru",
    "requests",
    "pydantic"
]
[project.optional-dependencies]
dev = [
    "black",
    "pytest"
]
